<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/margin_10dp">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:gravity="left"
        android:padding="5dp"
        android:text="About us"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:padding="5dp">
        <!--        <WebView-->
        <!--            android:background="@android:color/transparent"-->
        <!--            android:id="@+id/webview"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:scrollbars="none"/>-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_info_header"
            android:textColor="@color/black"
            android:textSize="15sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email:    "
                android:textColor="@color/black"
                android:textSize="@dimen/text_13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20dp"
                android:text="      contact@shompurok.com"
                android:textColor="@color/black"
                android:textSize="@dimen/text_15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Website:  "
                android:textColor="@color/black"
                android:textSize="@dimen/text_13sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/web"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_20dp"
                    android:text="@string/web_address"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_15sp" />

<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="@dimen/margin_20dp"-->
<!--                    android:text="contact@shompurok.com"-->
<!--                    android:textColor="@color/black"-->
<!--                    android:textSize="@dimen/text_15sp" />-->
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Facebook: "
                android:textColor="@color/black"
                android:textSize="@dimen/text_13sp" />

            <TextView
                android:id="@+id/facebook_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20dp"
                android:text="@string/facebook_address"
                android:textColor="@color/black"
                android:textSize="@dimen/text_15sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Twitter:   "
                android:textColor="@color/black"
                android:textSize="@dimen/text_13sp" />

            <TextView
                android:id="@+id/twitter_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_25dp"
                android:text="@string/twitter_address"
                android:textColor="@color/black"
                android:textSize="@dimen/text_15sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Instagram:"
                android:textColor="@color/black"
                android:textSize="@dimen/text_13sp" />

            <TextView
                android:id="@+id/instagram_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20dp"
                android:text="@string/instagram_address"
                android:textColor="@color/black"
                android:textSize="@dimen/text_15sp" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>